# Pyramid-Engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: windows-ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
CMake/: PyramidEngineConfig.cmake.in
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/include/Pyramid/Core/: Game.hpp
Engine/Core/source/: Game.cpp
Engine/Graphics/: CMakeLists.txt
Engine/Graphics/include/Pyramid/Graphics/: Camera.hpp  GraphicsDevice.hpp  PrimitiveTopology.hpp  Scene.hpp  Texture.hpp
Engine/Graphics/include/Pyramid/Graphics/Buffer/: BufferLayout.hpp  VertexArray.hpp  VertexBuffer.hpp
Engine/Graphics/include/Pyramid/Graphics/Geometry/: Mesh.hpp  MeshBounds.hpp  MeshCache.hpp
Engine/Graphics/include/Pyramid/Graphics/Material/: Material.hpp  MaterialCache.hpp
Engine/Graphics/include/Pyramid/Graphics/OpenGL/: OpenGLDevice.hpp  OpenGLFramebuffer.hpp  OpenGLTexture.hpp
Engine/Graphics/include/Pyramid/Graphics/OpenGL/Buffer/: OpenGLVertexArray.hpp  OpenGLVertexBuffer.hpp
Engine/Graphics/include/Pyramid/Graphics/Renderer/: RenderPasses.hpp  RenderSystem.hpp
Engine/Graphics/include/Pyramid/Graphics/Scene/: Octree.hpp  SceneManager.hpp
Engine/Graphics/include/Pyramid/Graphics/Shader/: ShaderCache.hpp  ShaderProgram.hpp
Engine/Graphics/include/Pyramid/Graphics/Texture/: TextureCache.hpp  TextureResource.hpp
Engine/Graphics/source/: Camera.cpp  Scene.cpp  Texture.cpp
Engine/Graphics/source/Geometry/: Mesh.cpp  MeshBounds.cpp  MeshCache.cpp
Engine/Graphics/source/Material/: Material.cpp  MaterialCache.cpp
Engine/Graphics/source/OpenGL/: OpenGLDevice.cpp  OpenGLDiagnostics.cpp  OpenGLDiagnostics.hpp  OpenGLFramebuffer.cpp  OpenGLTexture.cpp
Engine/Graphics/source/OpenGL/Buffer/: OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
Engine/Graphics/source/Renderer/: CommandBuffer.cpp  DeferredGeometryPass.cpp  ForwardRenderPass.cpp  RenderSystem.cpp  ShadowMapPass.cpp
Engine/Graphics/source/Scene/: Octree.cpp  SceneManager.cpp
Engine/Graphics/source/Shader/: ShaderCache.cpp  ShaderProgram.cpp
Engine/Graphics/source/Texture/: TextureCache.cpp  TextureResource.cpp
Engine/Math/: CMakeLists.txt
Engine/Platform/: CMakeLists.txt
Engine/Platform/include/Pyramid/Platform/: Window.hpp
Engine/Platform/include/Pyramid/Platform/Windows/: Win32OpenGLWindow.hpp
Engine/Platform/source/Windows/: Win32OpenGLWindow.cpp
Engine/Utils/: CMakeLists.txt
Engine/Utils/include/Pyramid/Util/: JPEGLoader.hpp
Engine/Utils/source/: Image.cpp  JPEGLoader.cpp  PNGLoader.cpp
Engine/Utils/test/: CMakeLists.txt  TestJPEGIDCT.cpp  TestJPEGIntegration.cpp  TestJPEGParser.cpp  TestJPEGSimple.cpp  TestPNGComponents.cpp  TestPNGLoader.cpp
Examples/BasicGame/: CMakeLists.txt
Examples/BasicGame/include/: BasicGame.hpp
Examples/BasicGame/source/: BasicGame.cpp
Examples/BasicRendering/: BasicRendering.cpp  BasicRendering.hpp  CMakeLists.txt
Tests/: CMakeLists.txt  CameraFrustumTests.cpp  CameraViewportTests.cpp  FramebufferResizeTests.cpp  MaterialCacheTests.cpp  MaterialResourceTests.cpp  MeshCacheTests.cpp  MeshResourceTests.cpp  NearestQueryTests.cpp  OctreeCompactionTests.cpp  OctreeConfigurationTests.cpp  OctreeQueryTests.cpp  OctreeUpdateTests.cpp  OpenGLDiagnosticsTests.cpp  PublicApiLinkage.cpp  RenderObjectBoundsTests.cpp  SceneTransformTests.cpp  ShaderCacheTests.cpp  TestGraphicsDevice.hpp  TextureCacheTests.cpp  TextureLoadingTests.cpp  WindowResizeEventTests.cpp
Tests/Consumer/: CMakeLists.txt  main.cpp
Tests/Fixtures/: JPEGFixtures.hpp
docs/: API.md  Architecture.md  BUILDING.md  DEVELOPMENT.md  EXAMPLES.md  README.md  ROADMAP.md
scripts/: bootstrap-msys2.ps1  build-mingw.ps1  configure-clean.ps1  run-smoke.ps1
